--- a/style.css
+++ b/style.css
@@ -78,3 +78,26 @@ body {
   );
   transition: background-position 0.05s linear;
 }
+
+#end-game {
+  width: 500px;
+  height: 300px;
+  background-color: #07a07c;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+
+#blur {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background: #0e090961;
+}
+
+.hidden {
+  display: none !important;
+}
