--- a/style.css
+++ b/style.css
@@ -72,8 +72,11 @@ body {
   pointer-events: none;
   z-index: 9;
   background: rgba(0, 0, 0, 0.95);
-  clip-path: none; /* se aplicará desde JS */
-  transition: clip-path 0.05s linear;
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-size: 100% 100%;
+  -webkit-mask-size: 100% 100%;
+  transition: mask-image 0.05s linear;
 }
 
 #end-game {
