--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@ body {
   flex-direction: column;
 }
 
+.container {
+  padding: 10px;
+  border-radius: 30px;
+  background-color: #07a050;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
+
 #game-container {
   width: 960px;
   height: 540px;
@@ -19,13 +26,16 @@ body {
     linear-gradient(to right, rgba(255,255,255,0.1) 5px, transparent 5px),
     linear-gradient(to bottom, rgba(255,255,255,0.1) 5px, transparent 5px);
   background-size: 60px 60px, 60px 60px;
+  cursor: none;
+  border-radius: 20px;
+  background-color: #6b6060fa;
 }
 
 .vertical-wall {
   position: absolute;
   width: 1000px;
   height: 540px;
-  background-color: red;
+  background-color: black;
   z-index: 5;
 }
 
@@ -33,7 +43,7 @@ body {
   position: absolute;
   width: 960px;
   height: 1000px;       
-  background-color: red;
+  background-color: black;
   z-index: 5;
 }
 
@@ -77,25 +87,39 @@ body {
   transition: mask-image 0.05s linear;
 }
 
-#end-game {
-  width: 500px;
-  height: 300px;
-  background-color: #07a07c;
+
+.UI {
   position: absolute;
+  top: 10px;
+  left: 0;
+  width: 95%;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  z-index: 20;
+  pointer-events: none;
+}
+
+#ui-score {
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 8px 12px;
+  border-radius: 6px;
+  color: white;
+  font-weight: bold;
+}
+
+.ui-right-column {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  z-index: 10;
+  gap: 8px;
 }
 
-#blur {
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  background: #0e090961;
-}
-
-.hidden {
-  display: none !important;
+.ui-message {
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 8px 12px;
+  border-radius: 6px;
+  color: white;
+  font-weight: bold;
+  transition: color 0.2s ease;
 }
